Finalización del proyecto
Finalización del proyecto agregando la información en los carruseles de la página junto con sus estilos.

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -250,7 +250,7 @@
           </button>
         </div>
       </div>
-      <div class="s-6 container-fluid text-center">
+      <div class="s-6 text-center">
         <div class="container-fluid more-info">
           <div class="row mx-auto align-items-center">
             <div class="col d-flex flex-column">
@@ -266,7 +266,7 @@
             </div>
             <div class="col">
               <div class="info-carousel">
-                <div id="moreInfoCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div id="moreInfoCarousel" class="carousel slide carousel-fade" data-bs-interval="false">
                   <div class="carousel-indicators">
                     <button type="button" data-bs-target="#moreInfoCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#moreInfoCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -281,34 +281,114 @@
                   </div>
                   <div class="carousel-inner">
                     <div class="carousel-item active info-carousel-img-1">
-                      <div class="info-carousel-img-1"></div>
+                      <div class="info-carousel-img-1">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">Graduados con Fondo de Becas Robert Carmack – James Mondloch</a></h3>
+                          <p class="content">ESTUDIANTES GRADUADOS CON NUESTRO FONDE DE BECASUniversidad Mesoamericana se enorgullese de los...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-2">
-                      <div class="info-carousel-img-2"></div>
+                      <div class="info-carousel-img-2">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">INFORMACIÓN SOBRE SUSPENSIÓN DE ACTIVIDADES</a></h3>
+                          <p class="content">INFORMACIÓN IMPORTANTE PARA ESTUDIANTES Y PERSONAL DE NUESTRO CAMPUS ZONA 3A toda la comunidad...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-3">
-                      <div class="info-carousel-img-3"></div>
+                      <div class="info-carousel-img-3">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">Modalidad de clases – Segundo Ciclo 2022</a></h3>
+                          <p class="content">A todos los estudiantes de la Sede de Quetzaltenango se les informa que, a partir del segundo...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-4">
-                      <div class="info-carousel-img-4"></div>
+                      <div class="info-carousel-img-4">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">Palabras del Rector Mayor de los salesiano</a></h3>
+                          <p class="content">Palabras del Rector Mayor de los salesiano</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-5">
-                      <div class="info-carousel-img-5"></div>
+                      <div class="info-carousel-img-5">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">Información sobre Solicitud de Becas</a></h3>
+                          <p class="content">REQUISITOS PARA SOLICITUD DE BECAPrimer IngresoAl tener la papelería completa, debe adjuntar en un...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-6">
-                      <div class="info-carousel-img-6"></div>
+                      <div class="info-carousel-img-6">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">Exámenes de Admisión 2021</a></h3>
+                          <p class="content">FECHAS 2021 Septiembre Jueves 9 Jueves 23 Octubre Miércoles 6 Jueves 21 Noviembre Jueves 4 Jueves...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-7">
-                      <div class="info-carousel-img-7"></div>
+                      <div class="info-carousel-img-7">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">Umial Tinimit Re Xelajuj No’j – 2021</a></h3>
+                          <p class="content">Umial Tinimit Re Xelajuj No'j 2021 - 2022El pasado domingo 5 de septiembre se celebró, de manera...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-8">
-                      <div class="info-carousel-img-8"></div>
+                      <div class="info-carousel-img-8">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">Inscripciones Cuarto y Sexto Semestre, Facultad de Medicina</a></h3>
+                          <p class="content">INSCRIPCIÓN CUARTO SEMESTRE Estudiantes que enviaron correo para asignación de cursos del segundo...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-9">
-                      <div class="info-carousel-img-9"></div>
+                      <div class="info-carousel-img-9">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">INFORMACIÓN IMPORTANTE PARA ALUMNOS SOBRE PROCESO DE VACUNACIÓN</a></h3>
+                          <p class="content">INFORMACIÓN IMPORTANTE PARA ALUMNOS SOBRE PROCESO DE VACUNACIÓN</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-10">
-                      <div class="info-carousel-img-10"></div>
+                      <div class="info-carousel-img-10">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">Comunicado de Vacunación</a></h3>
+                          <p class="content">COMUNICADO OFICIAL SOBRE PROCESO DE VACUNACIÓN</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#moreInfoCarousel" data-bs-slide="prev">
@@ -328,7 +408,7 @@
           <div class="row mx-auto align-items-center">
             <div class="col">
               <div class="info-carousel">
-                <div id="employment-exchangeCarousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                <div id="employment-exchangeCarousel" class="carousel slide carousel-fade" data-bs-interval="false">
                   <div class="carousel-indicators">
                     <button type="button" data-bs-target="#employment-exchangeCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#employment-exchangeCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -343,34 +423,114 @@
                   </div>
                   <div class="carousel-inner">
                     <div class="carousel-item active info-carousel-img-1">
-                      <div class="info-carousel-img-1"></div>
+                      <div class="info-carousel-img-1">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">Vacante: Analista de Infraestructura</a></h3>
+                          <p class="content">Vacante disponible: Analista de Infraestructura Objetivo del puesto: Implementar, mantener y...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-2">
-                      <div class="info-carousel-img-2"></div>
+                      <div class="info-carousel-img-2">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">Vacante: Analista Business Intelligence</a></h3>
+                          <p class="content">Vacante disponible: Analista Business IntelligenceObjetivo del puesto: - Analizar e implementar la...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-3">
-                      <div class="info-carousel-img-3"></div>
+                      <div class="info-carousel-img-3">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">Vacante: Analista Programador</a></h3>
+                          <p class="content">Vacante disponible: Analista ProgramadorObjetivo del puesto: Analizara e implementar la...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-4">
-                      <div class="info-carousel-img-4"></div>
+                      <div class="info-carousel-img-4">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">Vacante – Ejecutivos de Ventas</a></h3>
+                          <p class="content">Vacante disponible: Ejecutivos de VentasProHygiene busca Ejecutivos de Ventas. REQUISITOS: ...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-5">
-                      <div class="info-carousel-img-5"></div>
+                      <div class="info-carousel-img-5">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">RECEPCIONISTA BILINGÜE</a></h3>
+                          <p class="content">Vacante disponible: Recepcionista BilingüeEncargada de recibir y atender a las personas que...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-6">
-                      <div class="info-carousel-img-6"></div>
+                      <div class="info-carousel-img-6">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">Docente de Programación</a></h3>
+                          <p class="content">Vacante disponible: Docente de ProgramaciónColegio Evangélico La Patria contratará Docente de...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-7">
-                      <div class="info-carousel-img-7"></div>
+                      <div class="info-carousel-img-7">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">Coordinador de Equipo Frío</a></h3>
+                          <p class="content">Vacante disponible: Coordinador de Equipo FríoEmpresa Privada en Xela contratará Coordinador de...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-8">
-                      <div class="info-carousel-img-8"></div>
+                      <div class="info-carousel-img-8">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">SUPERVISOR DE VENTAS – Plaza Vacante</a></h3>
+                          <p class="content">PLAZA VACANTE - SUPERVISOR DE VENTASOBJETIVO DEL PUESTOPlanificar, dirigir, gestionar y liderar de...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-9">
-                      <div class="info-carousel-img-9"></div>
+                      <div class="info-carousel-img-9">
+                        <div class="carousel-item-info d-flex flex-column ">
+                          <h3 class="title"><a href="#">Plaza Vacante Jireh Automotriz</a></h3>
+                          <p class="content">Vacante disponible: Departamento de Ventas en Jireh Automotriz Jireh Automotriz ofrece una plaza...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                     <div class="carousel-item info-carousel-img-10">
-                      <div class="info-carousel-img-10"></div>
+                      <div class="info-carousel-img-10">
+                        <div class="carousel-item-info d-flex flex-column py-5">
+                          <h3 class="title"><a href="https://www.mesoamericana.edu.gt/supervision-y-monitoreo-del-censo-nacional-de-infraestructura-escolar-ingenieria-de-sistemas-informatica-y-ciencias-de-la-computacion-o-su-equivalente-2/">Supervisión y Monitoreo del Censo Nacional de Infraestructura Escolar – Ingeniería de Sistemas, Informática y Ciencias de la Computación o su equivalente</a></h3>
+                          <p class="content">La Dirección de Planificación Educativa –DIPLAN  Contratará los servicios de un (01) profesional...</p>
+                          <div class="btn-container">
+                            <a href="#" class="btn-meso-white">Click Aquí <i class="bi bi-caret-right-fill"></i></a>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                   </div>
                   <button class="carousel-control-prev" type="button" data-bs-target="#employment-exchangeCarousel" data-bs-slide="prev">
